# All-Of-Osu-DB

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_LOG.md  LICENSE  README.md  docker-compose.yml  docker-compose.yml.example  environment.yml  pyproject.toml
docs/: README.md  sources.md
docs/OWC/Logos/: README.md
docs/OWC/Mappool/: pool-structure.md  slot-guide.md
docs/knowledge-base/analysis/: dataset-and-biases.md
docs/knowledge-base/apis-and-community/: api-and-dumps.md  recommenders-and-tools.md
docs/knowledge-base/beatmap-format/: file-structure.md  hit-objects-and-sliders.md  hitsounds-in-beatmap.md  timing-points.md
docs/knowledge-base/data-dump/: enums-and-gotchas.md  import-workflow.md  overview-and-tables.md  sql-patterns.md
docs/knowledge-base/derived-metrics/: beatmap-metrics.md  enjoyment-score.md  user-skill.md
docs/knowledge-base/game/: difficulty-attributes.md  modes-and-status.md  mods.md  scoring-and-pp.md
docs/knowledge-base/hitsounds/: arrangement-json.md  sample-sets-and-files.md
docs/knowledge-base/skins/: element-registry.md  rendering-and-install.md  skin-ini.md
sql/: layerA_liquipedia.sql  layerB_schema.sql  layerB_tournament_mappool.sql  layerB_views.sql
src/all_of_osu_db/: cli.py  config.py  etl.py  validate.py
src/all_of_osu_db/etl/: tournament_mappool.py
src/all_of_osu_db/layerA/: liquipedia.py  liquipedia_load.py  osu_api_v2.py  verify_mappool.py
tests/: test_etl_tournament_mappool.py  test_liquipedia_parser.py  test_liquipedia_round_split.py  test_liquipedia_sqlite_load.py  test_verify_classify.py
(+4 files in other folders)
